# nivp

./: .gitignore  README.md  helpers.py  pyproject.toml  systems.py
examples/: README.md  harmonic_oscillator.py  henon_heiles.py  landau_lifschitz.py
examples/documentation/: Landau Lifshitz.pages
examples/outputs/models/harmonic_oscillator_1a5aa9b1/: 1_x.pth
examples/outputs/models/harmonic_oscillator_6ebc51a5/: 1_x.pth
examples/outputs/models/harmonic_oscillator_e733a4ab/: 1_x.pth
examples/outputs/models/henon_heiles_f0ac87ec/: 1_x.pth  1_y.pth
examples/outputs/models/landau_lifschitz_0f650352/: 1_mx.pth  1_my.pth  1_mz.pth
examples/outputs/models/landau_lifschitz_204683f2/: 1_mx.pth  1_my.pth  1_mz.pth
examples/outputs/models/landau_lifschitz_25a1e9e6/: 1_mx.pth  1_my.pth  1_mz.pth
examples/outputs/models/landau_lifschitz_7b3b4156/: 1_mx.pth  1_my.pth  1_mz.pth
examples/outputs/models/landau_lifschitz_89bd7749/: 1_mx.pth  1_my.pth  1_mz.pth
examples/outputs/paths/harmonic_oscillator_1a5aa9b1/: loss_history.json
examples/outputs/paths/harmonic_oscillator_6ebc51a5/: loss_history.json
examples/outputs/paths/harmonic_oscillator_e733a4ab/: loss_history.json
examples/outputs/paths/henon_heiles_f0ac87ec/: loss_history.json
examples/outputs/paths/landau_lifschitz_0f650352/: loss_history.json
examples/outputs/paths/landau_lifschitz_204683f2/: loss_history.json
examples/outputs/paths/landau_lifschitz_25a1e9e6/: loss_history.json
examples/outputs/paths/landau_lifschitz_7b3b4156/: loss_history.json
(+1 files in other folders)
